--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -33,7 +33,7 @@ body {
       padding-bottom: 0; } }
 
 .page-title {
-  font-size: 80px;
+  font-size: 50px;
   font-weight: bold;
   margin-bottom: 6px; }
   @media (max-width: 767px) {
@@ -42,7 +42,7 @@ body {
       margin-bottom: 14px; } }
 
 .page-description {
-  max-width: 665px;
+  min-width: 665px;
   font-size: 18px;
   margin-bottom: 59px; }
   @media (max-width: 767px) {
