--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Karla', sans-serif;
-  background-image: url("../images/stone.gif");
+  background-image: url("../images/default.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
