--- a/assets/css/bd-coming-soon.css
+++ b/assets/css/bd-coming-soon.css
@@ -4,7 +4,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  color: #000000;
+  color: #ffffff;
   padding-bottom: 75px; }
   @media (min-width: 768px) {
     body {
@@ -33,19 +33,18 @@ body {
       padding-bottom: 0; } }
 
 .page-title {
-  font-size: 50px;
+  font-size: 80px;
   font-weight: bold;
-  margin-top:10px
-  margin-bottom: 10px; }
+  margin-bottom: 6px; }
   @media (max-width: 767px) {
     .page-title {
       font-size: 35px;
       margin-bottom: 14px; } }
 
 .page-description {
-  min-width: 665px;
+  max-width: 465px;
   font-size: 18px;
-  margin-top: 100px; }
+  margin-bottom: 59px; }
   @media (max-width: 767px) {
     .page-description {
       font-size: 14px; } }
